@@ -111,9 +111,8 @@ serd_node_malloc(const size_t        length,
   const size_t size = sizeof(SerdNode) + serd_node_pad_size(length);
   SerdNode*    node = (SerdNode*)serd_calloc_aligned(serd_node_align, size);
 
-  node->length = 0;
-  node->flags  = flags;
-  node->type   = type;
+  node->flags = flags;
+  node->type  = type;
 
   assert((uintptr_t)node % serd_node_align == 0);
   return node;
@@ -167,21 +166,14 @@ serd_node_zero_pad(SerdNode* node)
 SerdNode*
 serd_new_simple_node(const SerdNodeType type, const SerdStringView str)
 {
-  if (type != SERD_BLANK && type != SERD_CURIE && type != SERD_URI &&
-      type != SERD_VARIABLE) {
-    return NULL;
-  }
-
-  SerdNodeFlags flags  = 0;
-  const size_t  length = str.buf ? serd_strlen(str.buf, &flags) : 0;
-  SerdNode*     node   = serd_node_malloc(length, flags, type);
+  SerdNode* const node = serd_node_malloc(str.len, 0, type);
 
   if (node) {
     if (str.buf) {
-      memcpy(serd_node_buffer(node), str.buf, length);
+      memcpy(serd_node_buffer(node), str.buf, str.len);
     }
 
-    node->length = length;
+    node->length = str.len;
   }
 
   serd_node_check_padding(node);
@@ -192,32 +184,21 @@ serd_new_simple_node(const SerdNodeType type, const SerdStringView str)
 SerdNode*
 serd_new_string(const SerdStringView str)
 {
-  SerdNodeFlags flags  = 0;
-  const size_t  length = serd_substrlen(str.buf, str.len, &flags);
-  SerdNode*     node   = serd_node_malloc(length, flags, SERD_LITERAL);
-
-  memcpy(serd_node_buffer(node), str.buf, str.len);
-  node->length = length;
-
-  serd_node_check_padding(node);
-  return node;
+  return serd_new_simple_node(SERD_LITERAL, str);
 }
 
-/// Internal pre-measured implementation of serd_new_plain_literal
-static SerdNode*
-serd_new_plain_literal_i(const SerdStringView str,
-                         SerdNodeFlags        flags,
-                         const SerdStringView lang)
+SerdNode*
+serd_new_plain_literal(const SerdStringView str, const SerdStringView lang)
 {
-  assert(str.len);
-  assert(lang.len);
-
-  flags |= SERD_HAS_LANGUAGE;
+  if (!lang.len) {
+    return serd_new_simple_node(SERD_LITERAL, str);
+  }
 
   const size_t len       = serd_node_pad_size(str.len);
   const size_t total_len = len + sizeof(SerdNode) + lang.len;
 
-  SerdNode* node = serd_node_malloc(total_len, flags, SERD_LITERAL);
+  SerdNode* node = serd_node_malloc(total_len, SERD_HAS_LANGUAGE, SERD_LITERAL);
+
   memcpy(serd_node_buffer(node), str.buf, str.len);
   node->length = str.len;
 
@@ -295,34 +276,6 @@ serd_new_typed_literal_uri(const SerdStringView str,
   return node;
 }
 
-/// Internal pre-measured implementation of serd_new_typed_literal
-static SerdNode*
-serd_new_typed_literal_i(const SerdStringView str,
-                         SerdNodeFlags        flags,
-                         SerdNodeType         datatype_type,
-                         const SerdStringView datatype)
-{
-  assert(str.len);
-  assert(datatype.len);
-  assert(strcmp(datatype.buf, NS_RDF "langString"));
-
-  return serd_new_typed_literal_expanded(
-    str, flags, datatype_type, datatype, SERD_EMPTY_STRING());
-}
-
-SerdNode*
-serd_new_plain_literal(const SerdStringView str, const SerdStringView lang)
-{
-  if (!lang.len) {
-    return serd_new_string(str);
-  }
-
-  SerdNodeFlags flags = 0;
-  serd_strlen(str.buf, &flags);
-
-  return serd_new_plain_literal_i(str, flags, lang);
-}
-
 SerdNode*
 serd_new_typed_literal(const SerdStringView str,
                        const SerdStringView datatype_uri)
@@ -335,10 +288,8 @@ serd_new_typed_literal(const SerdStringView str,
     return NULL;
   }
 
-  SerdNodeFlags flags = 0;
-  serd_strlen(str.buf, &flags);
-
-  return serd_new_typed_literal_i(str, flags, SERD_URI, datatype_uri);
+  return serd_new_typed_literal_expanded(
+    str, 0, SERD_URI, datatype_uri, SERD_EMPTY_STRING());
 }
 
 SerdNode*
