@@ -14,13 +14,9 @@
   OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 */
 
-#include "string_utils.h"
-
 #include "serd/serd.h"
 
-#include <assert.h>
 #include <stdlib.h>
-#include <string.h>
 
 void
 serd_free(void* const ptr)
@@ -69,51 +65,4 @@ serd_strerror(const SerdStatus status)
   }
 
   return "Unknown error";
-}
-
-static void
-serd_update_flags(const char c, SerdNodeFlags* const flags)
-{
-  switch (c) {
-  case '\r':
-  case '\n':
-    *flags |= SERD_HAS_NEWLINE;
-    break;
-  case '"':
-    *flags |= SERD_HAS_QUOTE;
-    break;
-  default:
-    break;
-  }
-}
-
-size_t
-serd_substrlen(const char* const    str,
-               const size_t         len,
-               SerdNodeFlags* const flags)
-{
-  assert(flags);
-
-  size_t i = 0;
-  *flags   = 0;
-  for (; i < len && str[i]; ++i) {
-    serd_update_flags(str[i], flags);
-  }
-
-  return i;
-}
-
-size_t
-serd_strlen(const char* const str, SerdNodeFlags* const flags)
-{
-  if (flags) {
-    size_t i = 0;
-    *flags   = 0;
-    for (; str[i]; ++i) {
-      serd_update_flags(str[i], flags);
-    }
-    return i;
-  }
-
-  return strlen(str);
 }
