@@ -19,20 +19,8 @@
 #include "serd/serd.h"
 
 #include <assert.h>
-#include <stdint.h>
 #include <stdio.h>
 #include <string.h>
-
-static void
-test_strlen(void)
-{
-  const uint8_t str[] = {'"', '5', 0xE2, 0x82, 0xAC, '"', '\n', 0};
-
-  SerdNodeFlags flags   = 0;
-  size_t        n_bytes = serd_strlen((const char*)str, &flags);
-  assert(n_bytes == 7 && flags == (SERD_HAS_QUOTE | SERD_HAS_NEWLINE));
-  assert(serd_strlen((const char*)str, NULL) == 7);
-}
 
 static void
 test_strerror(void)
@@ -51,7 +39,6 @@ test_strerror(void)
 int
 main(void)
 {
-  test_strlen();
   test_strerror();
 
   printf("Success\n");
